@startuml
class QuizBaseStruct <<struct>> {
    + quizName : string
}
class QuizSaver {
    + {static} xmlPath : string <<get>>
    + ConvertAstralBody2XmlElement(astralBodyDict:AstralBodyDict) : XmlElement
    + ConvertOrbit2Xml(astOrbit:List<AstralBodyDict>, quizType:QuizType) : XmlDocument
    + SaveXml(doc:XmlDocument, fileName:string) : void
    + {static} LoadXml(fileName:string) : XmlDocument
    + {static} ConvertXml2QuizBase(xmlDoc:XmlDocument, fileName:string) : QuizBaseStruct
    + {static} GetQuizFiles(fileNames:List<string>) : List<XmlDocument>
    + {static} DeleteQuizFiles(quizName:string) : void
}
class "List`1"<T> {
}
QuizBaseStruct --> "astralBodyStructList<AstralBodyStructDict>" "List`1"
QuizBaseStruct --> "quizType" QuizType
MonoBehaviour <|-- QuizSaver
QuizSaver --> "quizType" QuizType
QuizSaver --> "cloner" GameObject
@enduml
